--- a/README.org
+++ b/README.org
@@ -56,7 +56,7 @@ support). Download and install a CA cert bundle:
 wget https://curl.haxx.se/download/curl-7.57.0.tar.gz
 tar xvf curl-7.57.0.tar.gz
 cd curl-7.57.0/lib
-./mk-ca-bundle.crt
+./mk-ca-bundle.pl
 mv ca-bundle.crt ~
 #+END_SRC
 
